--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -5,6 +5,15 @@ body {
 }
 
 body {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+*:focus {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-user-modify: read-write-plaintext-only; 
+}
+
+body {
     background-color: #002021;
 }
 
