--- a/src/components/base/ThemeSwitcher.astro
+++ b/src/components/base/ThemeSwitcher.astro
@@ -4,7 +4,7 @@
 ---
 
 <span class="ThemeSwitcher">
-    <span id="MoonIcon">
+    <span id="MoonIcon" style="display: inline-block;">
         <Moon color="#f8f8ff" />
     </span>
     <span id="SunIcon" style="display: none;">
@@ -16,12 +16,4 @@
     span.ThemeSwitcher {
         padding: 10px;
     }
-    span.ThemeSwitcher span {
-
-    }
 </style>
-
-
-
-
-
