--- a/src/pages/allinone.astro
+++ b/src/pages/allinone.astro
@@ -57,7 +57,7 @@ import IsFile from "../components/IsFile.astro"
         <!--customCss-->
 	</head>
 	<body>
-		<Nav SiteName="<!--Sitename-->" />
+		<Nav SiteName="<!--Sitename-->" IconURL="<!--base_path-->favicon.ico" />
 		<main>
 
 		    <!--HeadomfStart-->
