--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import "../assets/base.css"
 		<title>ArmoLab's Onemanager theme</title>
 	</head>
 	<body>
-		<Nav SiteName="ArmoLab OM"/>
+		<Nav SiteName="ArmoLab OM" IconURL="/aom-assets/images/fufu512.png" />
 		<main>
 			<Introduction />
 		</main>
