--- a/src/pages/allinone.astro
+++ b/src/pages/allinone.astro
@@ -46,6 +46,7 @@ import IsFile from "../components/IsFile.astro"
         <meta name="description" content="<!--Description-->" />
         <link rel="icon" href="<!--base_path-->favicon.ico" type="image/x-icon" />
         <link rel="shortcut icon" href="<!--base_path-->favicon.ico" type="image/x-icon" />
+        <script src="../assets/NavAutoHider.js"></script>
         <title><!--Title--></title>
 
 
