--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
+import "../assets/base.css"
 import Nav from "../components/NavBar.astro"
 import Introduction from "../components/Introduction.astro"
-import "../assets/base.css"
+import Copyright from "../components/Copyright.astro"
 ---
 
 <html lang="en">
@@ -11,11 +12,13 @@ import "../assets/base.css"
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>ArmoLab's Onemanager theme</title>
+		<script src="../assets/NavAutoHider.js"></script>
 	</head>
 	<body>
-		<Nav SiteName="ArmoLab OM" IconURL="/aom-assets/images/fufu512.png" />
+		<Nav SiteName="Charo Homepage" IconURL="/aom-assets/images/fufu512.png" />
 		<main>
 			<Introduction />
 		</main>
+		<Copyright SiteName="Charo Homepage" />
 	</body>
 </html>
