--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -100,8 +100,10 @@ code, .code {
 
 
 .Contents {
-    width: 100%;
-    padding: 50px 0;
+    width: 85%;
+    border-radius: 15px;
+    padding: 15px 30px;
+	margin: 0 auto 25px;
     background-color: rgba(40, 41, 42, .75);
     backdrop-filter: blur(25px);
     text-align: center;
