--- a/src/components/Copyright.astro
+++ b/src/components/Copyright.astro
@@ -4,8 +4,18 @@
 
 <div>
     <p style="font-size: larger;" set:html={SiteName}></p>
-    <p>Powered by <a href="https://astro.build/">Astro.js</a>, Theme for <a href="https://github.com/qkqpttgf/OneManager-php">Onemanager</a></p>
-    <p><a href="https://github.com/ArmoLab/Onemanager-Theme-Charo">Theme Charo</a> by <a href="https://github.com/ArmoLabArmoLab Org</a>, And you.</p>
+    <p>
+        Powered by
+        <a href="https://astro.build/">Astro.js</a>,
+        Theme for
+        <a href="https://github.com/qkqpttgf/OneManager-php">Onemanager</a>
+    </p>
+    <p>
+        <a href="https://github.com/ArmoLab/Onemanager-Theme-Charo">Theme Charo</a>
+        by
+        <a href="https://github.com/ArmoLab">ArmoLab Org</a>
+        , And you.
+    </p>
 </div>
 
 <style>
@@ -17,6 +27,6 @@ div {
     text-align: center;
 }
 body[theme="Light"] div {
-    background-color: rgba(200, 210, 220, 0.75);
+    background-color: rgba(200, 210, 220, .75);
 }
 </style>
