--- a/src/components/PathBar.astro
+++ b/src/components/PathBar.astro
@@ -7,19 +7,20 @@ import Slash from "./fa-icons/chevron-right.astro"
 import ButtonContainer from "./base/ButtonContainer.astro"
 import IconContainer from "./base/IconContainer.astro"
 ---
-
-<ButtonContainer href="<!--base_path-->">
-    <Home color="#f8f8ff" />
-</ButtonContainer>
-
-<!--DiskPathArrayStart-->
-
-<IconContainer>
-    <Slash color="#f8f8ff" />
-</IconContainer>
-
-<ButtonContainer href="<!--PathArrayLink-->" is:raw>
-    <!--PathArrayName-->
-</ButtonContainer>
-
-<!--DiskPathArrayEnd-->
+<div style="display: flex; align-items: center;">
+    <ButtonContainer href="<!--base_path-->">
+        <Home color="#f8f8ff" />
+    </ButtonContainer>
+    
+    <!--DiskPathArrayStart-->
+    
+    <IconContainer>
+        <Slash color="#f8f8ff" />
+    </IconContainer>
+    
+    <ButtonContainer href="<!--PathArrayLink-->" is:raw>
+        <!--PathArrayName-->
+    </ButtonContainer>
+    
+    <!--DiskPathArrayEnd-->
+</div>
