--- a/src/components/base/ButtonContainer.astro
+++ b/src/components/base/ButtonContainer.astro
@@ -15,7 +15,10 @@
 		transition: all .35s ease;
 		background-color: rgba(128, 128, 128, .5);
 		border-radius: 16px;
-        padding: 8px 12px;
+        padding: 10px 12px;
+		min-width: 40px;
+		min-height: 40px;
+		box-sizing: border-box;
 		user-select: none;
 	}
 	.UglyButton:not([data-disabled="true"]):hover {
