--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -84,7 +84,7 @@ body[theme="Light"] a:link::after, body[theme="Light"] a:visited::after {
     position: relative;
     z-index: -1;
 }
-code, .code {
+code, .code, .markdown-body .code {
     display: block; 
     box-sizing: border-box; 
     background-color: #28292a; 
@@ -107,12 +107,28 @@ code, .code {
 .Contents {
     width: 85%;
     border-radius: 15px;
-    padding: 15px 30px;
+    padding: 20px 25px;
 	margin: 0 auto 25px;
     background-color: rgba(40, 41, 42, .75);
     backdrop-filter: blur(25px);
-    text-align: center;
 }
 body[theme="Light"] .Contents {
     background-color: rgba(200, 210, 220, 0.75);
+}
+
+
+/* markdown tweak */
+body[theme="Night"] .markdown-body {
+    color: #f8f8ff;
+}
+body[theme="Night"] .markdown-body h1,
+body[theme="Night"] .markdown-body h2 {
+    border-bottom: 1px solid #28292a;
+}
+body .markdown-body img {
+    background-color: transparent;
+}
+body .markdown-body a::after {
+    content: none;
+    display: none;
 }
