--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,8 @@ import Copyright from "../components/Copyright.astro"
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name="description" content="The ArmoLab's Onemanager Theme: Charo." />
+		<meta name="description" content="A Theme for Onemanager, written in Astro." />
 		<meta name="generator" content={Astro.generator} />
 		<title>ArmoLab's Onemanager theme</title>
 		<script src="../assets/NavAutoHider.js"></script>
