--- a/src/components/Introduction.astro
+++ b/src/components/Introduction.astro
@@ -5,7 +5,7 @@
         <div class="IntroductionItemLeft">
             <h1>
                 The ArmoLab's Onemanager Theme <br />
-                <a style="font-size: larger;">Charo</a>
+                <span style="font-size: larger;">Charo</span>
             </h1>
             <p>A Theme for Onemanager, written in Astro.</p>
         </div>
@@ -16,7 +16,7 @@
     <br>
     <br>
     <br>
-    <h2>In hurry? Let's have a <a class="Highlighted">Quick Start</a>.</h2>
+    <h2>In hurry? Let's have a <span class="Highlighted">Quick Start</span>.</h2>
     <h3>- Platform Setting =&gt; customTheme value: (still some bugs here)</h3>
     <code>https://aom.koto.gq/allinone.html</code>
     <h3>- Setting =&gt; Upgrade: (you better build it yourself)</h3>
