--- a/src/components/MultiDisk.astro
+++ b/src/components/MultiDisk.astro
@@ -5,7 +5,7 @@
 <div class="MultiDiskContainer hidden">
     <div class="MultiDisk">
         <!--MultiDisksStart-->
-            <a href="<!--MultiDisksUrl-->" class="Disk <!--MultiDisksNow-->">
+            <a href="<!--MultiDisksUrl-->" class="Disk <!--MultiDisksNow-->" aria-label="A disk">
                 <!--MultiDisksName-->
             </a>
         <!--MultiDisksEnd-->
